--- a/dlam/css/master_a-master.css
+++ b/dlam/css/master_a-master.css
@@ -1,3 +1,160 @@
+#u1649
+{
+	border-style: none;
+	border-color: transparent;
+	background-color: #000000;
+	position: fixed;
+}
+
+#menuu1650
+{
+	border-style: none;
+	border-color: transparent;
+	background-color: #FF0000;
+	position: fixed;
+}
+
+#u1673
+{
+	background-color: #000000;
+	position: relative;
+}
+
+#u1673:hover
+{
+	background-color: #FF0000;
+}
+
+#u1676-4
+{
+	border-style: none;
+	border-color: transparent;
+	background-color: transparent;
+	text-align: center;
+	letter-spacing: 1px;
+	font-size: 15px;
+	color: #FFFFFF;
+	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
+	font-weight: bold;
+	position: relative;
+}
+
+#u1696
+{
+	background-color: #000000;
+	position: relative;
+}
+
+#u1673.MuseMenuActive,#u1696:hover
+{
+	background-color: #FF0000;
+}
+
+#u1698-4
+{
+	border-style: none;
+	border-color: transparent;
+	background-color: transparent;
+	text-align: center;
+	letter-spacing: 1px;
+	font-size: 15px;
+	color: #FFFFFF;
+	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
+	font-weight: bold;
+	position: relative;
+}
+
+#u1668
+{
+	background-color: #000000;
+	position: relative;
+}
+
+#u1696.MuseMenuActive,#u1668:hover
+{
+	background-color: #FF0000;
+}
+
+#u1670-4
+{
+	border-style: none;
+	border-color: transparent;
+	background-color: transparent;
+	text-align: center;
+	letter-spacing: 1px;
+	font-size: 15px;
+	color: #FFFFFF;
+	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
+	font-weight: bold;
+	position: relative;
+}
+
+#u1659
+{
+	background-color: #000000;
+	position: relative;
+}
+
+#u1668.MuseMenuActive,#u1659:hover
+{
+	background-color: #FF0000;
+}
+
+#u1661-4
+{
+	border-style: none;
+	border-color: transparent;
+	background-color: transparent;
+	text-align: center;
+	letter-spacing: 1px;
+	font-size: 15px;
+	color: #FFFFFF;
+	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
+	font-weight: bold;
+	position: relative;
+}
+
+#u1652
+{
+	background-color: #000000;
+	position: relative;
+}
+
+#u1659.MuseMenuActive,#u1652:hover
+{
+	background-color: #FF0000;
+}
+
+#u1652.MuseMenuActive
+{
+	background-color: #FF0000;
+}
+
+#u1654-4
+{
+	border-style: none;
+	border-color: transparent;
+	background-color: transparent;
+	text-align: center;
+	letter-spacing: 1px;
+	font-size: 15px;
+	color: #FFFFFF;
+	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
+	font-weight: bold;
+	position: relative;
+}
+
+#u1673.MuseMenuActive #u1676-4,#u1696.MuseMenuActive #u1698-4,#u1668.MuseMenuActive #u1670-4,#u1659.MuseMenuActive #u1661-4,#u1652.MuseMenuActive #u1654-4
+{
+	border-style: none;
+	border-color: transparent;
+}
+
+.MenuItem /* unifiedNavBar */
+{
+	cursor: pointer;
+}
+
 #u1585
 {
 	border-style: none;
@@ -6,7 +163,7 @@
 	position: relative;
 }
 
-#u1585_align_to_page
+#u1672,#u1695,#u1665,#u1658,#u1651,#u1585_align_to_page
 {
 	position: relative;
 }
