--- a/dlam/css/iefonts_index.css
+++ b/dlam/css/iefonts_index.css
@@ -1,24 +1,49 @@
-#u856-7
+#u568-4
+{
+	font-family: source-sans-pro-n9, sans-serif;
+}
+
+#u576-4
+{
+	font-family: source-sans-pro-n9, sans-serif;
+}
+
+#u583-4
+{
+	font-family: source-sans-pro-n9, sans-serif;
+}
+
+#u589-4
+{
+	font-family: source-sans-pro-n9, sans-serif;
+}
+
+#u595-4
+{
+	font-family: source-sans-pro-n9, sans-serif;
+}
+
+#u78-7
 {
 	font-family: source-sans-pro-n7, sans-serif;
 }
 
-#u1172-4,#u1174-4,#u1173-4,#u1177-4,#u1175-4,#u1178-4,#u1179-4,#u1180-4,#u1181-4,#u1182-4,#u1183-4,#u1184-4
+#u90-4,#u99-4,#u91-4,#u100-4,#u92-4,#u93-4,#u101-4,#u94-4,#u102-4,#u95-4,#u103-4,#u96-4
 {
 	font-family: neuton-i4, serif;
 }
 
-#u715-10,#u749-2,#u749-6,#u749-8,#u749-10,#u751-11,#u752-14,#u753-10,#u754-7
+#u77-10,#u83-2,#u83-6,#u83-8,#u83-10,#u84-11,#u85-14,#u86-10,#u87-7
 {
 	font-family: source-sans-pro-n4, sans-serif;
 }
 
-#u715-2,#u749-4,#u751-4,#u751-7,#u752-4,#u752-10,#u753-6,#u754-2
+#u77-2,#u83-4,#u84-4,#u84-7,#u85-4,#u85-10,#u86-6,#u87-2
 {
 	font-family: source-sans-pro-n6, sans-serif;
 }
 
-#u1172-2,#u1174-2,#u1173-2,#u1177-2,#u1175-2,#u1178-2,#u1179-2,#u1180-2,#u1181-2,#u1182-2,#u1183-2,#u1184-2,#u926-4,#u965-4,#u979-4,#u993-4,#u1007-4
+#u90-2,#u99-2,#u91-2,#u100-2,#u92-2,#u93-2,#u101-2,#u94-2,#u102-2,#u95-2,#u103-2,#u96-2,#u320-4,#u306-4,#u292-4,#u379-4,#u334-4
 {
 	font-family: neuton-n4, serif;
 }
