--- a/dlam/css/master_a-master.css
+++ b/dlam/css/master_a-master.css
@@ -1,161 +1,4 @@
-#menuu1650
-{
-	border-style: none;
-	border-color: transparent;
-	background-color: #FF0000;
-	position: fixed;
-}
-
-#u1673
-{
-	background-color: #000000;
-	position: relative;
-}
-
-#u1673:hover
-{
-	background-color: #FF0000;
-}
-
-#u1676-4
-{
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	text-align: center;
-	letter-spacing: 1px;
-	font-size: 15px;
-	color: #FFFFFF;
-	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
-	font-weight: bold;
-	position: relative;
-}
-
-#u1696
-{
-	background-color: #000000;
-	position: relative;
-}
-
-#u1673.MuseMenuActive,#u1696:hover
-{
-	background-color: #FF0000;
-}
-
-#u1698-4
-{
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	text-align: center;
-	letter-spacing: 1px;
-	font-size: 15px;
-	color: #FFFFFF;
-	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
-	font-weight: bold;
-	position: relative;
-}
-
-#u1668
-{
-	background-color: #000000;
-	position: relative;
-}
-
-#u1696.MuseMenuActive,#u1668:hover
-{
-	background-color: #FF0000;
-}
-
-#u1670-4
-{
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	text-align: center;
-	letter-spacing: 1px;
-	font-size: 15px;
-	color: #FFFFFF;
-	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
-	font-weight: bold;
-	position: relative;
-}
-
-#u1659
-{
-	background-color: #000000;
-	position: relative;
-}
-
-#u1668.MuseMenuActive,#u1659:hover
-{
-	background-color: #FF0000;
-}
-
-#u1661-4
-{
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	text-align: center;
-	letter-spacing: 1px;
-	font-size: 15px;
-	color: #FFFFFF;
-	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
-	font-weight: bold;
-	position: relative;
-}
-
-#u1652
-{
-	background-color: #000000;
-	position: relative;
-}
-
-#u1659.MuseMenuActive,#u1652:hover
-{
-	background-color: #FF0000;
-}
-
-#u1652.MuseMenuActive
-{
-	background-color: #FF0000;
-}
-
-#u1654-4
-{
-	border-style: none;
-	border-color: transparent;
-	background-color: transparent;
-	text-align: center;
-	letter-spacing: 1px;
-	font-size: 15px;
-	color: #FFFFFF;
-	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
-	font-weight: bold;
-	position: relative;
-}
-
-#u1673.MuseMenuActive #u1676-4,#u1696.MuseMenuActive #u1698-4,#u1668.MuseMenuActive #u1670-4,#u1659.MuseMenuActive #u1661-4,#u1652.MuseMenuActive #u1654-4
-{
-	border-style: none;
-	border-color: transparent;
-}
-
-.MenuItem /* unifiedNavBar */
-{
-	cursor: pointer;
-}
-
-#u1649
-{
-	border-style: none;
-	border-color: transparent;
-	background-color: #000000;
-	position: fixed;
-}
-
-#u1585
+#u687
 {
 	border-style: none;
 	border-color: transparent;
@@ -163,25 +6,25 @@
 	position: relative;
 }
 
-#u1672,#u1695,#u1665,#u1658,#u1651,#u1585_align_to_page
+#u687_align_to_page
 {
 	position: relative;
 }
 
-#u1587-5
+#u689-5
 {
 	color: #FFFFFF;
 	font-family: Helvetica, Helvetica Neue, Arial, sans-serif;
 	position: relative;
 }
 
-#u1587
+#u689
 {
 	font-size: 9px;
 	letter-spacing: 1px;
 }
 
-#u1584-4
+#u688-4
 {
 	letter-spacing: 0px;
 	font-size: 9px;
